--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Send config in server
         uses: garygrossgarten/github-action-scp@release
         with:
-            local: balans-config/docker-compose.yaml
+            local: docker-compose.yaml
             remote: .
             host: ${{ secrets.SSH_HOST }}
             username: ${{ secrets.SSH_USER }}
