--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,13 +11,13 @@ services:
     image: daemondxx/balans-back:latest
     ports:
     - 3000:3000
+    environment:
+      - DB_HOST=mongo
     depends_on:
       - mongo
 
   mongo:
     image: mongo:latest
-    ports:
-      - 27017:27017
     volumes:
       - ./db_test/db:/data/db
 
